<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_bar_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="-10"
        android:title="settings"
        app:showAsAction="always" >

        <menu android:id="@+id/sousmenu">
            <item android:id="@+id/french"
                android:title="@string/french"
                android:icon="@drawable/ic_france"/>

            <item android:id="@+id/german"
                android:title="@string/german"
                android:icon="@drawable/ic_germany"/>

            <item android:id="@+id/english"
                android:title="@string/english"
                android:icon="@drawable/ic_united_kingdom"/>
            <item android:id="@+id/cloud"
                android:title="@string/cloud"
                android:icon="@drawable/ic_cloud_upload"/>
            <item android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/ic_info_"/>
        </menu>
    </item>


</menu>