<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.audreycelia.homeworkapp.CloudFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_about_icon"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_about_icon"
            android:layout_marginBottom="30dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/aboutText"
            android:textSize="18dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_about_made"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_text"
            android:text="@string/made"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_about_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_made"
            android:text="@string/author"
            android:textSize="15dp"
            android:textAlignment="center" />
    </RelativeLayout>

</FrameLayout>
