<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.audreycelia.homeworkapp.AddExamFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_add_exam_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/et_add_exam_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_add_exam_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_exam_name"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_exam_date"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_add_exam_name"
            android:ems="10"
            android:inputType="date"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>


        <TextView
            android:id="@+id/tv_add_exam_from"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_exam_date"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/from"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_exam_from"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time"
            android:layout_below="@+id/tv_add_exam_date"
            android:layout_toRightOf="@+id/tv_add_exam_from"
            android:layout_toEndOf="@+id/tv_add_exam_from" />

        <TextView
            android:id="@+id/tv_add_exam_until"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_below="@+id/et_add_exam_date"
            android:layout_toEndOf="@+id/et_add_exam_from"
            android:layout_toRightOf="@+id/et_add_exam_from"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/until"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_exam_until"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_add_exam_date"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time" />

        <TextView
            android:id="@+id/tv_add_exam_course"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_exam_from"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/course"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <Spinner
            android:id="@+id/sp_add_exam_course"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/et_add_exam_from"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/et_add_exam_grade"
            android:layout_alignStart="@+id/et_add_exam_grade"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/tv_add_exam_room"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_exam_course"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/room"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_exam_room"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/et_add_exam_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/et_add_exam_date"
            android:layout_alignTop="@+id/tv_add_exam_room"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_add_exam_grade"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_exam_room"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/grade"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_exam_grade"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_add_exam_room"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_add_exam_description"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_exam_grade"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_exam_description"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:ems="30"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:layout_below="@+id/tv_add_exam_description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

</FrameLayout>
