<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.audreycelia.homeworkapp.AddCourseFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_edit_course_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/et_edit_course_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tv_edit_course_name"
            android:layout_toRightOf="@+id/tv_edit_course_name"
            android:textColor="@color/text_color"
            />

        <TextView
            android:id="@+id/tv_edit_course_day"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_course_name"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/day"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sp_edit_course_day"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_edit_course_name"
            android:layout_toEndOf="@+id/tv_edit_course_day"
            android:layout_toRightOf="@+id/tv_edit_course_day"
            android:spinnerMode="dialog"
            android:entries="@array/days"/>

        <TextView
            android:id="@+id/tv_edit_course_from"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/tv_edit_course_day"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/tv_edit_course_day"
            android:layout_below="@+id/tv_edit_course_day"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/from"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_edit_course_from"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_edit_course_day"
            android:layout_toRightOf="@+id/tv_edit_course_from"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/tv_edit_course_until"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/sp_edit_course_day"
            android:layout_toRightOf="@+id/et_edit_course_from"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/until"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_edit_course_until"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/sp_edit_course_day"
            android:layout_toRightOf="@+id/tv_edit_course_until"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/tv_edit_course_teacher"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_edit_course_until"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/title_teacher"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sp_edit_course_teacher"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_edit_course_from"
            android:layout_toEndOf="@+id/tv_edit_course_from"
            android:layout_toRightOf="@+id/tv_edit_course_from"
            android:spinnerMode="dialog"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/tv_edit_course_color"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_above="@+id/et_edit_course_room"
            android:layout_alignEnd="@+id/tv_edit_course_teacher"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/tv_edit_course_teacher"
            android:layout_below="@+id/tv_edit_course_teacher"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/color"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <Button
            android:id="@+id/bt_edit_course_color"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/sp_edit_course_teacher"
            android:layout_toEndOf="@+id/tv_edit_course_teacher"
            android:layout_toRightOf="@+id/tv_edit_course_color"
            android:background="@color/primary2"
            android:text="@string/choose"
            android:textColor="@color/button_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_edit_course_room"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_course_color"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/room"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_edit_course_room"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bt_edit_course_color"
            android:layout_toEndOf="@+id/tv_edit_course_color"
            android:layout_toRightOf="@+id/tv_edit_course_color"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/tv_edit_course_description"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_course_room"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_edit_course_description"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_edit_course_description"
            android:ems="30"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:textColor="@color/text_color" />

        <ImageButton
            android:id="@+id/ib_delete_edit_course"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorRed"
            android:clickable="true"
            app:srcCompat="@drawable/ic_delete"
            android:visibility="invisible"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

</FrameLayout>
